# sd_train_architecture

./: README.md  pyproject.toml
docker/: Dockerfile  compose.yaml
docs/: API.md  ARCHITECTURE.md
examples/: inference.py  local.yaml  图片来源.txt  训练图片来源.txt
scripts/: benchmark.py
src/lora_mvp/: __init__.py  cli.py  config.py  logging.py
src/lora_mvp/api/: __init__.py  deps.py  main.py  schemas.py
src/lora_mvp/data/: __init__.py  caption.py  dataset.py  quality.py  transforms.py
src/lora_mvp/evaluation/: __init__.py  clip_score.py  compare.py  fid.py
src/lora_mvp/training/: __init__.py  trainer.py  utils.py
src/lora_mvp/utils/: __init__.py  image_io.py
tests/: test_api.py  test_data_pipeline.py  test_trainer_config.py
