[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-mvp"
version = "0.1.0"
description = "Minimal LoRA training pipeline MVP"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.27.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0.80",
  "peft>=0.10.0",
  "pillow>=10.2.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "scikit-image>=0.22.0",
  "scikit-learn>=1.3.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "torchaudio>=2.2.0",
  "tqdm>=4.66.0",
  "uvicorn[standard]>=0.29.0",
  "diffusers[torch]>=0.27.0",
  "transformers>=4.39.0",
  "datasets>=2.18.0",
  "open-clip-torch>=2.24.0",
  "torchmetrics[image]>=1.3.0",
  "safetensors>=0.4.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.5",
  "coverage>=7.4.0",
  "ruff>=0.3.0",
  "black>=24.2.0",
  "mypy>=1.8.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--disable-warnings -q"

[tool.coverage.run]
source = ["lora_mvp"]
branch = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
